# TuxenOS

./: Cargo.toml  Cargo.toml~  README.md  README.md~  aarch64-tuxen_os.json  build.sh
src/: gdt.rs  interrupts.rs  interrupts.rs~  lib.rs  lib.rs~  main.rs  main.rs~  power.rs  serial.rs  serial.rs~  vga_buffer.rs  vga_buffer.rs~
